some styling chagne

--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -1,3 +1,8 @@
+.product-container {
+    margin-right: 10px;
+    margin-left: 30px;
+}
+
 .product {
     display: flex;
     border-bottom: 1px solid lightgray;
@@ -17,4 +22,9 @@
 
 .cart-btn:hover {
     background-color: rgb(255, 198, 55);
+}
+.product > img {
+    height: 300px;
+    object-fit: cover;
+    margin: 15px 30px;
 }
